--- a/app.yaml
+++ b/app.yaml
@@ -14,6 +14,9 @@ handlers:
 - url: /favicon.ico
   static_files: static/img/favicon.png
   upload: static/img/favicon.png
+- url: /robots.txt
+  static_files: static/robots.txt
+  upload: static/robots.txt
 
 # admin
 - url: /_ah/queue/deferred
